tests/baselines/reference/parseNoWhitespaceBeforeExclamation.errors.txt
parseNoWhitespaceBeforeExclamation.ts(3,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(4,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(5,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(6,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(7,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(8,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(9,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(10,6): error TS1538: A non-null assertion must be preceded by an identifier.
parseNoWhitespaceBeforeExclamation.ts(11,6): error TS1538: A non-null assertion must be preceded by an identifier.


==== parseNoWhitespaceBeforeExclamation.ts (9 errors) ====
    declare var value: any;
    
    value !;
         ~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value !instanceof String;
         ~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value ! instanceof String
         ~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value/* this is a comment */!instanceof String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value/* this is a comment */! instanceof String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value !in String;
         ~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value ! in String
         ~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value/* this is a comment */!in String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    value/* this is a comment */! in String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1538: A non-null assertion must be preceded by an identifier.
    